# dwh-definitions

./: .gitignore  .project  Makefile  README.md  alembic.ini  dagtransport  pyproject.toml  requirements.dev.txt  requirements.txt  sampler.py  setup.py
.github/workflows/: build_and_publish.yml  checks.yml  deploy_and_publish.yml  downgrade.yml
ddl/: __init__.py  settings.py
ddl/DWH/: README.md
ddl/ODS/: README.md
ddl/STG/: __init__.py  union_member.py
dwh/: Authv.py  Pingerv.py  Union_memberv.py  Userdatav.py  __init__.py  validation  validation.py
instruments/: README.md
instruments/functions/: check_existing_table.py  truncate.py  upload_sample.py
migrations/: env.py  script.py.mako
migrations/custom_scripts/: __init__.py  operations_schemas.py  operations_tables.py  render.py  rights.py  schemas.py  tables.py
migrations/rights/: __init__.py  operations.py  operations_groups.py  operations_tables.py  render.py  schemas.py
migrations/schema/: __init__.py  operations.py  render.py  schemas.py
migrations/versions/: 0881d4df126c_the_great_merge.py  0a24041f09d1_init.py  0b93d0ede7b8_rights.py  13e189003105_test.py  1e868db5c6ea_physics_contacts.py  20230828_1334_0a24041f09d1_init.py  20230911_2126_1e868db5c6ea_physics_contacts.py  20240422_1624_4892e78eb989_add_raw_html.py  20240505_0010_a80b250420e4_schema_integrity_fixes.py  20240505_0047_b0d0bbe799db_fix_reciever.py  20240507_0246_6f659c404b5f_add_container_log.py  20240507_0436_45fc3ad3a4db_add_container_log_in_ods.py  20240507_0454_33f7db929809_docker_ps_table.py  20240507_0742_1100c470c547_dm_infra_logs.py  20240509_0026_af10c6f8bb21_add_ods.py  20240509_1220_d459997cd681_github_stg.py  20240510_1212_94699f7481fb_add_dim_cabnet_act_to_dm.py  20240510_1330_8b6f4a99f692_add_dimroomact_to_dm.py  (+155 more)
profcomff_definitions/: .project  __init__.py  base.py
tests/: conftest.py  database.py  tests.py
(+83 files in other folders)
